# TeamTrack

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  pyproject.toml
conf/: multi_target_gnn_all.yaml  multi_target_gnn_basketball.yaml  multi_target_gnn_handball.yaml  multi_target_gnn_soccer.yaml  multi_target_lstm_all.yaml  multi_target_lstm_basketball.yaml  multi_target_lstm_handball.yaml  multi_target_lstm_soccer.yaml  single_target_linear_basketball.yaml  single_target_linear_handball.yaml  single_target_linear_soccer.yaml  single_target_lstm_all.yaml  single_target_lstm_basketball.yaml  single_target_lstm_handball.yaml  single_target_lstm_soccer.yaml
notebooks/: analysis_appearance.ipynb  analysis_motion.ipynb  analysis_sim.ipynb  analyze_tracking_hpo.ipynb
scripts/: convert_teamtrack_to_mot.py  download_from_labelbox.py  split_teamtrack.py
scripts/benchmark/: README.md
scripts/benchmark/yolov8/: README.md
scripts/benchmark/yolov8/botsort/: config.yaml  hpo.py  test.py  test.yaml  train.py
scripts/benchmark/yolov8/bytetrack/: config.yaml
scripts/forecasting/: gnn.py  linear.py  lstm.py  mlp.py  run.py  sample.py
scripts/preproc/: convert_teamtrack_to_mot.py  process_test_results.py  validate_traj_data.py
scripts/tracking/mmdet/: README.md
scripts/tracking/yolov8/: README.md
static/css/: index.css
teamtrack/: __init__.py  base_module.py  datamodule.py  mdn_module.py  metrics.py  transforms.py  utils.py
teamtrack/config/: defaults.py
teamtrack/models/: __init__.py  gnn.py  linear.py  lstm.py
(+17 files in other folders)
